Fix Submit Button Safari

--- a/resource/scss/style.scss
+++ b/resource/scss/style.scss
@@ -246,12 +246,13 @@ main {
 }
 .btn_orange {
     display: block;
-    background-color: #FFA800;
+    background: none !important;
+    background-color: #FFA800 !important;
     width: 233px;
     height: 50px;
     margin: auto;
-    border: none;
-    border-radius: 50px;
+    border: none !important;
+    border-radius: 50px !important;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: normal;
@@ -432,6 +433,9 @@ footer {
     }
 } 
 @media (max-width: 650px) {
+    main {
+        margin-top: 20px;
+    }
     #gallery {
         flex-flow: column-reverse;
     }
